committing tests working at least from IDE